# simple-cpp-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  api-example.cpp  build.cmd  configure.cmd  gamepad_mappings.txt  main.cpp  run.cmd
engine-test/: CMakeLists.txt  Main.cpp
engine-test/BitmapFont/: BitmapFontRendering.cpp  BitmapFontRendering.h  CMakeLists.txt
engine-test/FrameBufferTest/: CMakeLists.txt  FrameBufferTest.cpp  FrameBufferTest.h  FrameBufferTestApp.cpp
engine-test/GameClass/: CMakeLists.txt  GameClass.cpp  TestGame.h
engine-test/InputTest/: CMakeLists.txt  InputTest.cpp
engine-test/Resources/: normalized_vertex.vert
engine-test/Spritebatch/: CMakeLists.txt  Spritebatch.cpp  SpritebatchTest.cpp
src/: CMakeLists.txt  Engine.h  Game.cpp  Game.h  GameState.h  Internal.h  Singleton.h  StateManager.cpp  StateManager.h  Timer.cpp  Timer.h  Typedefs.h  main.cpp
src/Input/: Input.cpp  Input.h  MouseCodes.h
src/OpenGL/: CMakeLists.txt  FrameBuffer.h  FrameBufferAttachment.h  GLUtils.h  IndexBuffer.h  Shader.h  ShaderAttributes.cpp  ShaderAttributes.h  Texture2D.cpp  Texture2D.h  VertexArray.h  VertexBuffer.h
src/Render/: BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Spritebatch.cpp  Spritebatch.h  SpritebatchItem.h  Viewport.h
src/Shaders/: fragment.frag
src/Systems/: CMakeLists.txt  FrameAnimation.cpp  FrameAnimation.h  GameState.h  StateManager.cpp  StateManager.h  TileSet.cpp  TileSet.h
src/Utils/: CMakeLists.txt  Rectangle.h  Utils.cpp  Utils.h
src/engine/: CMakeLists.txt  Types.h  engine.h  game.h  spritebatch.h
src/engine/Input/: CMakeLists.txt  GamePadButtonCodes.h  Input.cpp  Input.h  KeyCodes.h
src/engine/Memory/: CMakeLists.txt  StackAllocator.h
src/engine/OpenGL/: CMakeLists.txt  GLUtils.h  IndexBuffer.cpp  IndexBuffer.h  Shader.h  ShaderAttributes.cpp  ShaderAttributes.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexPositionNormalTexture.h  glad.c
src/engine/Render/: CMakeLists.txt  Camera2D.cpp  Camera2D.h  Viewport.h
src/engine/Shaders/: fragment.frag  vertex.vert
src/engine/Utils/: CMakeLists.txt
